--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,53 +1,35 @@
-<!DOCTYPE html>
-<html>
-  <body>
-    <!--Header Section-->
-    <header>
-      <h1>{{ title }}</h1>
-    </header>
-
-    <!--Start of Main Section-->
-    <main>
-      <!--The navigation filter section that a user clicks-->
-      <section class="filters">
-        <p class="filter-name"*ngIf="categoryFilter">
-          <span class="filter-label">Filter:</span> {{ categoryFilter.name }} <a class="clear-button"(click)="clearFilters()"> /Clear</a>
-        </p>
-      <!--The category in the filter section-->
-        <h2>Categories</h2>
-        <p class="filter-category" *ngFor="let category of categories" [class.active]="category.id === categoryFilter?.id">
-          <a (click)="setCategoryFilter(category)">{{ category.name }}</a>
-        </p>
-      <!--The tags in the filter section-->
-        <h2>Tags</h2>
-        <p class="filter-tag"*ngFor="let tag of tags">{{ tag.name }}</p>
-      </section>
-    
-    <!--Projects Section-->
-      <section class="projects">
-        <!--Displays only the project title and the excerpt-->
-        <article *ngFor="let project of filteredProjects()">
-          <h3>{{ project.title }}</h3>
-          <p>{{ project.excerpt }}</p>
-          <!--Displays the category for the current project-->
-          <p class="project-category"*ngIf="project.category">Category: <a class="category-button"(click)="setCategoryFilter(project.category!)">{{ project.category.name }}</a></p>
-          <!-- Displays the tag for the current project -->
-            <div class="project-tag">
-              Tags:
-              <span *ngFor="let tag of project.tags">
-                <a>{{ tag.name }} </a>
-              </span>
-            </div>
-        </article>
-      </section>
-    </main>
-    <!--End of Main Section-->
-
-    <!--Start of Footer Section-->
-    <footer>
-      <p>&copy; {{ date }} {{ author }}</p>
-    </footer>  
-    <!--End of Footer Section-->
-  </body>
-</html>
-
+<header>
+  <h1>{{ title }}</h1>
+</header>
+<main>
+  <section id="side-nav">
+    <article *ngIf="categoryFilter || tagFilter">
+      <h2>Filter:</h2>
+      <div class="current-filter" (click)="clearFilters()">
+        {{ categoryFilter?.name || tagFilter?.name }}
+        <i class="bi bi-trash"></i>
+      </div>
+    </article>
+    <article id="categories">
+      <app-categories
+        [categoryFilter]="categoryFilter"
+        (newCategoryFilterEvent)="setCategoryFilter($event)"
+      ></app-categories>
+    </article>
+    <article id="tags">
+      <app-tags
+        [tagFilter]="tagFilter"
+        (newTagFilterEvent)="setTagFilter($event)"
+      ></app-tags>
+    </article>
+  </section>
+  <section id="projects">
+    <app-projects
+      [categoryFilter]="categoryFilter"
+      (newCategoryFilterEvent)="setCategoryFilter($event)"
+      [tagFilter]="tagFilter"
+      (newTagFilterEvent)="setTagFilter($event)"
+    ></app-projects>
+  </section>
+</main>
+<footer>&copy; {{ date.getFullYear() }} {{ author }}</footer>
