--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,78 +1,15 @@
-/* app.component.scss */
-
 body {
   margin: 0;
-  font-family: Arial, sans-serif;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-size: 14px;
+  color: #333;
+  background-color: #f5f5f5;
 }
 
-header {
-  text-align: left;
-  padding: 20px;
-}
-
-h2 {
-  text-align: right;
-  padding: 10px;
-  font-size: 20px;
-}
-
-// Styling the navigation filter section
-.filters {
+app-root {
   display: flex;
   flex-direction: column;
-  float: right;
-  padding: 20px;
-  background-color: #cccccc7c;
-  border-radius: 10px;
-  margin-right: 20px;
-}
-
-.filter-label{
-  display:block;
-  text-align: right;
-  font-size: 18px;
-  font-weight: bold;
-}
-
-.filter-tag,
-.filter-category,
-.filter-name {
-  margin: 0px;
-  text-align: right;;
-}
-
-.filter-tag:hover,
-.filter-category:hover {
-  background-color: rgba(0, 0, 0, 0.356);
-  color: white;
-}
-
-.clear-button:hover,
-.category-button:hover{
-  font-weight: bold;
-}
-
-// Styling the Projects section
-.projects {
-  display: grid;
-  padding: 20px;
-}
-.projects article {
-  border: 1px solid #ccc;
-  border-radius: 10px;
-  padding: 20px;
-}
-.project-category,
-.project-tag {
-  font-size: 13px;
-  margin: 0px;
-}
-
-// Styling the footer
-footer {
-  text-align: center;
-  padding: 10px;
-  position: fixed;
-  bottom: 0;
-  right: 0;
+  align-items: flex-start;
+  justify-content: space-between;
+  min-height: 100vh;
 }
