--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,73 +1,76 @@
-header {
-  margin: 0 1rem;
-  ul {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    li {
-      margin: 0 1rem;
-      a {
-        text-decoration: none;
-        color: black;
-        font-size: 1.2rem;
-        cursor: pointer;
-        &.active {
-          color: #4aa;
-        }
-      }
-    }
-  }
+:host {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
+
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #f8f9fa;
+  border-bottom: 1px solid #e7e7e7;
+  padding: 0.5rem 1rem;
+  margin: 15px;
+  width: 96%;
+}
+
+.brand {
+  flex: 1; /* Allow the brand to take up remaining space */
+}
+
+nav {
+  display: flex; /* Display the navigation links as a flex container */
+  gap: 1rem; /* Add some space between the links */
+  margin-left: auto; /* Push the links to the right */
+}
+
+
+nav ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  gap: 1rem;
+  margin-left: auto; 
+}
+
 
 main {
   display: flex;
-  flex-grow: 1;
-  flex-direction: row-reverse;
-  justify-content: space-between;
-  align-items: flex-start;
-  min-width: 460px;
-  width: 100%;
-  #side-nav {
-    margin-right: 1rem;
-    text-align: right;
-    background-color: #eee;
-    border-radius: 1rem;
-    padding: 1rem;
-    align-self: flex-start;
-    width: 10rem;
-    div {
-      cursor: pointer;
+  flex: 1;
+}
 
-      &.active {
-        background-color: #ccc;
-      }
+#side-nav {
+  margin-left: 1rem; /* Change margin-right to margin-left */
+  text-align: right;
+  background-color: #eee;
+  border-radius: 1rem;
+  padding: 1rem;
+  align-self: flex-start;
+  width: 10rem;
+  div {
+    cursor: pointer;
+
+    &.active {
+      background-color: #ccc;
     }
   }
+}
 
-  #projects,
-  #project {
-    width: 100%;
-  }
+#side-nav.hidden {
+  display: none;
 }
-app-projects,
-app-project {
-  width: 100%;
-  // display: flex;
-  // flex-direction: row;
-  // flex-wrap: wrap;
-  // gap: 1rem;
-  // align-items: flex-start;
-  // justify-content: space-evenly;
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
-  grid-gap: 10px;
-  justify-items: center;
-}
+
+
+// router-outlet {
+//   flex: 1;
+//   padding: 1rem;
+// }
+
 footer {
-  font-size: 0.8rem;
-  padding-right: 1rem;
-  align-self: flex-end;
+  background-color: #f8f9fa;
+  text-align: center;
+  padding: 0.5rem 1rem;
+  border-top: 1px solid #e7e7e7;
 }
