restyled all of the pages
added transitions/ animations, responsiveness looks better, styled the pages

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <header>
   <div class="brand">
-    <h1>{{ title | uppercase}}</h1>
+    <h1 class="title-home">{{ title | uppercase}}</h1>
   </div>
   <nav>
     <ul>
@@ -28,7 +28,7 @@
           routerLinkActive="active"
           [routerLinkActiveOptions]="{ exact: true }"
           ariaCurrentWhenActive="page"
-          >0.3 Portfolio</a
+          >0.3 Projects</a
         >
       </li>
     </ul>
