--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,7 @@
 header {
-  margin: 0 1rem;
+  // margin: 0 1rem;
+  margin-top: 75px;
+  // margin-bottom:100px;
   margin-left: 100px;
   margin-right: 100px;
   ul {
@@ -52,6 +54,10 @@ main {
   #project {
     width: 100%;
   }
+}
+
+.title-home{
+  color: rgb(155, 155, 155);
 }
 
 /* Media query for desktop screens */
