--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,5 +1,77 @@
-<h1> About me</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tracy's Portfolio</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+</head>
+<body>
+    <div class="content-container">
+        <div class="about-container">
+            <div class="about-content">
+                <h1>About me</h1>
+                <p>
+                    Hello! I'm Tracy, a student at BCIT studying in the Software Systems Developer program. My journey into the world of programming started 
+                    back in high school when I discovered Tumblr. I was fascinated by the ability to create custom themes using HTML and CSS. 
+                </p>
+                <p>
+                    Last year, I reignited my passion for coding, inspired by the talented peers around me. I'm excited to continue learning and growing in this ever-evolving field!
+                </p>
+                <p>
+                    When I'm not on my computer, you can find me exploring scenic hikes, discovering new food spots with my friends, or going to the gym. I love staying 
+                    active and finding new adventures to embark on during my free time! <strong>And I also really like giraffes!!</strong> 
+                </p>
+            </div>
+        </div>
 
-<p>Hello! I'm Tracy, a student at BCIT studying in the Software Systems Developer program. My journey into the world of programming started back in high school when I discovered Tumblr. I was fascinated by the ability to create custom themes using HTML and CSS. Last year, I reignited my passion for coding, inspired by the talented peers around me. I'm excited to continue learning and growing in this ever-evolving field! When I'm not on my computer, you can find me exploring scenic hikes, discovering new food spots with my friends, or hitting the gym. I love staying active and finding new adventures to embark on during my free time!
-</p>
-
+        <div class="toolbox-container">
+            <h2 class="toolbox-title">My Toolbox & Things I Can Do</h2>
+            <div class="toolbox-icons">
+                <div>
+                    <i class="fa-brands fa-html5 toolbox-icon"></i>
+                    <span class="toolbox-icon-title">HTML</span>
+                </div>
+                <div>
+                    <i class="fa-brands fa-css3-alt toolbox-icon"></i>
+                    <span class="toolbox-icon-title">CSS</span>
+                </div>
+                <div>
+                    <i class="fa-brands fa-js-square toolbox-icon"></i>
+                    <span class="toolbox-icon-title">JavaScript</span>
+                </div>
+                <div>
+                    <i class="fa-brands fa-react toolbox-icon"></i>
+                    <span class="toolbox-icon-title">React</span>
+                </div>
+                <div>
+                    <i class="fa-brands fa-git-alt toolbox-icon"></i>
+                    <span class="toolbox-icon-title">Git</span>
+                </div>
+                <div>
+                    <i class="fa-brands fa-github toolbox-icon"></i>
+                    <span class="toolbox-icon-title">GitHub</span>
+                </div>
+                <div>
+                    <i class="fa-brands fa-sass toolbox-icon"></i>
+                    <span class="toolbox-icon-title">Sass</span>
+                </div>
+                <div>
+                    <i class="fa-brands fa-microsoft toolbox-icon"></i>
+                    <span class="toolbox-icon-title">VS Code</span>
+                </div>
+                <div>
+                    <i class="fa-solid fa-mobile toolbox-icon"></i>
+                    <i class="fa-solid fa-desktop toolbox-icon"></i>
+                    <span class="toolbox-icon-title">Responsive Web</span>
+                </div>
+                <div>
+                    <i class="fa-solid fa-file-code toolbox-icon"></i>
+                    <span class="toolbox-icon-title">C#</span>
+                </div>
+                
+            </div>
+        </div>
+    </div>
+</body>
+</html>
