--- a/src/app/components/about/about.component.scss
+++ b/src/app/components/about/about.component.scss
@@ -1,17 +1,104 @@
-h1 {
+@keyframes slideInFromLeft {
+    from {
+        transform: translateX(-100%);
+        opacity: 0;
+    }
+    to {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
+@keyframes slideInFromRight {
+    from {
+        transform: translateX(100%);
+        opacity: 0;
+    }
+    to {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
+body {
+    font-family: Arial, sans-serif;
+}
+
+.about-container, .toolbox-container {
+    padding: 20px;
+    box-sizing: border-box;
+}
+
+.about-container {
+    animation: slideInFromLeft 1.5s ease-out forwards;
+}
+
+.about-content, .toolbox-icons {
+    max-width: 800px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.about-content h1, .toolbox-container h2 {
     color: #333; 
     font-size: 2.5em; 
     text-align: center; 
     margin-bottom: 20px; 
 }
 
-p {
+.about-content p {
     color: #666; 
     font-size: 1.2em; 
     line-height: 1.5; 
     text-align: justify;
     margin-bottom: 20px; 
     margin-top: 30px;
-    margin-left: 100px;
-    margin-right: 100px;
+    margin-left: 70px;
+}
+
+.toolbox-container{
+    animation: slideInFromRight 1.5s ease-out forwards;
+}
+
+.toolbox-icons {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 50px;
+}
+
+.toolbox-icons div {
+    width: 20%; /* Set the width of each icon container */
+    text-align: center; /* Center the icons and text within each container */
+}
+
+.toolbox-icon {
+    font-size: 3em;
+    color: #333;
+}
+
+.toolbox-icon-title {
+    display: block;
+    margin-top: 10px;
+    font-size: 1.2em;
+}
+
+@media (min-width: 768px) {
+    .content-container {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .about-container, .toolbox-container {
+        width: 50%;
+        padding: 40px;
+    }
+
+    .about-content, .toolbox-icons {
+        text-align: left;
+    }
+    .toolbox-container{
+        margin-right:70px;
+    }
 }
