--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -8,9 +8,9 @@
             <h3>Hi, my name is</h3>
             <h1>Tracy Huang.</h1>
             <h2>I build things for the web.</h2>
-            <p class="software-developer">SOFTWARE DEVELOPER</p>
-            <p>As a BCIT Software Systems Developer student, I am deeply engaged in expanding my knowledge and skills. I am dedicated to learning new technologies and methodologies, which I actively apply to my projects. This hands-on approach allows me to stay current with industry trends and prepares me for a successful career in software development.
-            </p>
+            <p class="software-developer">JUNIOR SOFTWARE DEVELOPER</p>
+            <!-- <p>As a BCIT Software Systems Developer student, I am deeply engaged in expanding my knowledge and skills. I am dedicated to learning new technologies and methodologies, which I actively apply to my projects. This hands-on approach allows me to stay current with industry trends and prepares me for a successful career in software development.
+            </p> -->
         </div>
         <div class="image-container">
             <img src="../../../assets/images/portrait.png" alt="Tracy Huang">
@@ -18,3 +18,4 @@
     </div>
 </body>
 </html>
+<br/><br/><br/><br/><br/><br/><br/><br/><br/>
