--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -6,16 +6,30 @@
     max-width: 1200px; 
     margin: 0 auto;
     padding: 0 20px;
+    margin-top: 50px;
+}
+
+@keyframes slideInFromRight {
+    from {
+        transform: translateX(100%);
+        opacity: 0;
+    }
+    to {
+        transform: translateX(0);
+        opacity: 1;
+    }
 }
 
 .content {
     flex: 1;
     text-align: center; /* Center text on smaller screens */
+    animation: slideInFromRight 1.5s ease-out forwards;
 }
 
 .image-container {
     flex: 0 0 300px; 
     padding: 20px; /* Add some padding around the image */
+    animation: slideInFromRight 1.5s ease-out forwards;
 }
 
 img {
@@ -48,6 +62,7 @@ p {
 
 .software-developer {
     font-style: italic;
+    text-align: center;
 }
 
 /* Media query for desktop screens */
@@ -66,7 +81,9 @@ p {
     }
 
     h1 {
-        font-size: 50px;
+        font-size: 60px;
+        margin-top: 0px;
+        margin-bottom: 0px;
     }
 
     h2, h3 {
@@ -75,5 +92,8 @@ p {
 
     p {
         font-size: 1.2em;
+    }
+    .software-developer {
+        text-align: left;
     }
 }
