--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -1,3 +1,14 @@
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
 #projects {
   display: flex;
   flex-direction: column;
@@ -30,6 +41,9 @@ a {
   display: flex;
   flex-direction: column; /* Stack image and text vertically on smaller screens */
   padding: 20px;
+  max-width: 700px;
+  margin: 0 auto;
+  animation: fadeIn 1s ease-out; 
 
   img {
       width: 100%; /* Adjust image width for smaller screens */
