--- a/src/app/components/project/project.component.html
+++ b/src/app/components/project/project.component.html
@@ -11,21 +11,21 @@
       <!-- <div>{{ project.excerpt }}</div> -->
       <div [innerHTML]="project.body">{{ project.body }}</div>
     </div>
-    <img
-      *ngIf="project.image"
-      [src]="'assets/images/' + project.image"
-      alt="Image of {{ project.title }}"
-    />
-    <img
-      *ngIf="project.image2"
-      [src]="'assets/images/' + project.image2"
-      alt="Image 2 of {{ project.title }}"
-    />
-    <img
-      *ngIf="project.image3"
-      [src]="'assets/images/' + project.image3"
-      alt="Additional Image 3 of {{ project.title }}"
-    />
+    <div class="image-slider">
+      <img
+        *ngFor="let image of project.images; let i = index"
+        [src]="'assets/images/' + image"
+        [class.active]="i === currentImageIndex"
+        alt="Image {{i + 1}} of {{ project.title }}"
+      />
+      <div class="dots">
+        <span *ngFor="let image of project.images; let i = index" [class.active]="i === currentImageIndex"></span>
+      </div>
+      <button class="prev" (click)="changeImage(-1)">&#10094;</button>
+      <button class="next" (click)="changeImage(1)">&#10095;</button>
+    </div>
+    
+    
     <section *ngIf="project.snippets.length" class="snippets-section">
       <h3>Code Snippets</h3>
       <ul>
