changing some fonts

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <header>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+
   <div class="brand">
     <h1 class="title-home">{{ title | uppercase}}</h1>
   </div>
