--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -5,22 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tracy's Portfolio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <div class="content-container">
         <div class="about-container">
             <div class="about-content">
-                <h1>About me</h1>
+                <h1>About me 👋</h1>
                 <p>
-                    Hello! I'm Tracy, a student at BCIT studying in the Software Systems Developer program. My journey into the world of programming started 
+                    Hello! I'm <span style="color: #1c494c; font-weight: bold;">Tracy</span>, a student at BCIT studying in the Software Systems Developer program. My journey into the world of programming started 
                     back in high school when I discovered Tumblr. I was fascinated by the ability to create custom themes using HTML and CSS. 
                 </p>
                 <p>
                     Last year, I reignited my passion for coding, inspired by the talented peers around me. I'm excited to continue learning and growing in this ever-evolving field!
                 </p>
                 <p>
-                    When I'm not on my computer, you can find me exploring scenic hikes, discovering new food spots with my friends, or going to the gym. I love staying 
-                    active and finding new adventures to embark on during my free time! <strong>And I also really like giraffes!!</strong> 
+                    When I'm not on my computer, you can find me exploring <span style="color: #73CADC; font-weight: bold;">scenic hikes</span>, discovering new <span style="color: #73CADC; font-weight: bold;">food spots</span> with my friends, or going to the <span style="color: #73CADC; font-weight: bold;">gym</span>. I love staying 
+                    active and finding new adventures to embark on during my free time!
                 </p>
             </div>
         </div>
@@ -61,9 +63,8 @@
                     <span class="toolbox-icon-title">VS Code</span>
                 </div>
                 <div>
-                    <i class="fa-solid fa-mobile toolbox-icon"></i>
-                    <i class="fa-solid fa-desktop toolbox-icon"></i>
-                    <span class="toolbox-icon-title">Responsive Web</span>
+                    <i class="fa-brands fa-angular toolbox-icon"></i>
+                    <span class="toolbox-icon-title">Angular</span>
                 </div>
                 <div>
                     <i class="fa-solid fa-file-code toolbox-icon"></i>
