--- a/src/app/components/about/about.component.scss
+++ b/src/app/components/about/about.component.scss
@@ -24,6 +24,9 @@ body {
     font-family: Arial, sans-serif;
 }
 
+h1, h2{
+    font-family: 'Montserrat', sans-serif;
+}
 .about-container, .toolbox-container {
     padding: 20px;
     box-sizing: border-box;
