--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <div class="container">
@@ -18,4 +20,9 @@
     </div>
 </body>
 </html>
-<br/><br/><br/><br/><br/><br/><br/><br/><br/>
+
+<br/><br/>
+<br/>
+<br/>
+<br/>
+
