--- a/src/app/components/about/about.component.scss
+++ b/src/app/components/about/about.component.scss
@@ -59,6 +59,10 @@ h1, h2{
     margin-left: 70px;
 }
 
+.toolbox-title{
+    margin-left: 50px;
+}
+
 .toolbox-container{
     animation: slideInFromRight 1.5s ease-out forwards;
 }
@@ -69,6 +73,7 @@ h1, h2{
     justify-content: center;
     gap: 20px;
     margin-top: 50px;
+    margin-left: 50px;
 }
 
 .toolbox-icons div {
@@ -103,5 +108,12 @@ h1, h2{
     }
     .toolbox-container{
         margin-right:70px;
+    }
+    .toolbox-title{
+        margin-left:0px;
+    }
+
+    .toolbox-icons{
+        margin-left:0;
     }
 }
